ce que g fait marche a moitié